--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: M.K. Computer Services
     </ol>
     <!-- Carousel items -->
     <div class="carousel-inner">
-    <div class="active item"><img src= "/images/mk5.jpg" alt="meeting" > </div>
+    <div class="active item"><img src= "/images/mk5.jpg" alt="mk" > </div>
     <div class="item"><img src= "/images/callus.jpg" alt="callus" > </div>
     <div class="item"><img src= "/images/affordable.jpg" alt="affordable" > </div>    
     </div>
